feat: status for ideas
